# freecloak

./: README.md  pyproject.toml
docs/devlogs/: plugin_system.md
src/freecloak/: __init__.py  __main__.py  app.py  cli.py
src/freecloak/abstract/: __init__.py  plugin_info.py
src/freecloak/logging/: __init__.py  utils.py
src/freecloak/plugins/abstract/: __init__.py
src/freecloak/plugins/configuration/: __init__.py  cli.py  commands.py
src/freecloak/plugins/exceptions/: __init__.py  exit_exception.py
src/freecloak/plugins/keycloak/: __init__.py  abstract.py  auth.py  client.py  exceptions.py  utils.py
src/freecloak/plugins/keycloak/abstract/: __init__.py  keycloak_auth.py
src/freecloak/plugins/keycloak/data/: action_map.json
src/freecloak/plugins/logging/: __init__.py  abstract.py  filters.py  utils.py
src/freecloak/plugins/plugins/: __init__.py  cli.py  commands.py  loader.py
src/freecloak/plugins/utils/: __init__.py  plugins.py
